--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sndyuk</groupId>
 	<artifactId>logback-more-appenders</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0-FIX-NPE</version>
 	<name>logback-more-appenders</name>
 	<description>logback appenders.</description>
 
